# novo

./: .gitignore  README.md  pyproject.toml
.agents/skills/commit-changes/: SKILL.md
.agents/skills/set-project/: SKILL.md
.agents/skills/set-project/references/: claude-md-format.md  docs-format.md
.agents/skills/skill-creator/: SKILL.md
.claude/: CLAUDE.md
.claude/plans/: parsed-roaming-mist.md
.claude/skills/: set-project
docs/: architecture.md  cli.md  coding-guidelines.md  core.md  development.md  models.md  testing.md  tui.md  utils.md
src/novo/: __init__.py  __main__.py
src/novo/cli/: __init__.py  config.py  delete.py  info.py  init.py  list.py  new.py  open.py  search.py  seed.py
src/novo/core/: config.py  experiment.py  git.py  seed.py  workspace.py
src/novo/models/: __init__.py  config.py  experiment.py  seed.py
src/novo/tui/: app.py
src/novo/tui/screens/: confirm.py  main.py  new_experiment.py  seed_manager.py
src/novo/tui/styles/: app.tcss
src/novo/tui/widgets/: experiment_card.py  experiment_list.py  file_preview.py  file_tree.py  search_bar.py  status_bar.py
src/novo/utils/: paths.py  shell.py  terminal.py  uv.py
src/seeds/default/: seed.toml
src/seeds/default/template/.agents/: agents.toml
src/seeds/default/template/.claude/: CLAUDE.md
tests/: conftest.py
tests/test_cli/: test_commands.py
tests/test_core/: test_config.py  test_experiment.py
tests/test_tui/: test_file_preview.py  test_file_tree.py
