[project]
name = "novo"
version = "0.1.0"
description = "A terminal tool for managing experimental Python projects"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "textual>=1.0",
    "platformdirs>=4.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "tomli-w>=1.0",
]

[project.scripts]
novo = "novo.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/novo", "src/seeds"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "textual-dev>=1.0"]
